// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render caption text with example Farsi offscreen text 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #545658;
  margin-top: 0.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  width: 100%;
  width: calc(100% - 0.5rem);
  margin-left: 0.5rem;
  border-left: 0.0625rem solid #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    width: 100%;
    margin: 0.5rem 0 0;
  }
}

.emotion-0>span>p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.emotion-0>span>p:last-child {
  padding-bottom: 0;
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    width: calc(100% - 1rem);
    margin-left: 1rem;
    padding-right: 1rem;
    padding-left: 0.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding-right: 0;
    padding-left: 0.5rem;
  }
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <figcaption
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="emotion-2"
      >
         ، عنوان
      </span>
      <p>
        Some caption text...
      </p>
    </span>
  </figcaption>
</div>
`;

exports[`should render caption text with example News offscreen text 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #545658;
  margin-top: 0.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  width: 100%;
  width: calc(100% - 0.5rem);
  margin-left: 0.5rem;
  border-left: 0.0625rem solid #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    width: 100%;
    margin: 0.5rem 0 0;
  }
}

.emotion-0>span>p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.emotion-0>span>p:last-child {
  padding-bottom: 0;
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    width: calc(100% - 1rem);
    margin-left: 1rem;
    padding-right: 1rem;
    padding-left: 0.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding-right: 0;
    padding-left: 0.5rem;
  }
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <figcaption
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="emotion-2"
      >
        Caption, 
      </span>
      <p>
        Some caption text...
      </p>
    </span>
  </figcaption>
</div>
`;

exports[`should render caption with multiple paragraphs 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #545658;
  margin-top: 0.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  width: 100%;
  width: calc(100% - 0.5rem);
  margin-left: 0.5rem;
  border-left: 0.0625rem solid #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    width: 100%;
    margin: 0.5rem 0 0;
  }
}

.emotion-0>span>p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.emotion-0>span>p:last-child {
  padding-bottom: 0;
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    width: calc(100% - 1rem);
    margin-left: 1rem;
    padding-right: 1rem;
    padding-left: 0.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding-right: 0;
    padding-left: 0.5rem;
  }
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <figcaption
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="emotion-2"
      >
        Caption, 
      </span>
      <p>
        This is paragraph 1
      </p>
      <p>
        This is paragraph 2
      </p>
      <p>
        Paragraph 3
      </p>
    </span>
  </figcaption>
</div>
`;

exports[`should render correctly with inline block 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #545658;
  margin-top: 0.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  width: 100%;
  width: calc(100% - 0.5rem);
  margin-left: 0.5rem;
  border-left: 0.0625rem solid #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    width: 100%;
    margin: 0.5rem 0 0;
  }
}

.emotion-0>span>p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.emotion-0>span>p:last-child {
  padding-bottom: 0;
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    width: calc(100% - 1rem);
    margin-left: 1rem;
    padding-right: 1rem;
    padding-left: 0.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding-right: 0;
    padding-left: 0.5rem;
  }
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-3 {
  padding-bottom: 1.5rem;
  margin: 0;
}

.emotion-5 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-5:focus,
.emotion-5:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <figcaption
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="emotion-2"
      >
        Caption, 
      </span>
      <p>
        <b>
          This is some text.
        </b>
        <span
          class="emotion-3 emotion-4"
          lang="fa"
        >
          <a
            aria-label="چیسربرگرundefined"
            class="focusIndicatorReducedWidth emotion-5 emotion-6"
            href="https://google.com"
          >
            چیسربرگر
          </a>
        </span>
      </p>
    </span>
  </figcaption>
</div>
`;
